# tudoOlimpiadas

./: README-pt.md  README.md  app.py  dicionario.py  pyproject.toml  requirements.txt  run.py
static/css/: blog.css  buscar.css  catalogo.css  inicio.css  olimpiadas.css  sobre.css
static/js/: catalogo.js  idioma.js
templates/: blog.html  buscar.html  catalogo.html  inicio.html  olimpiadas.html  sobre.html
