[tool.poetry]
name = "tudo-olimpiadas"
version = "0.1.0"
description = "Site para visualização de olimpíadas do conhecimento"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3"
streamlit = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
